# mpc-for-cpp

./: README.md
mpc/: CMakeLists.txt
mpc/include/: GetRefPath.h  MPCCal.h  config.h
mpc/src/: GetRefPath.cpp  MPCCal.cpp  Main.cpp
